Fixed my footer on mobile device

--- a/css/styles.css
+++ b/css/styles.css
@@ -367,19 +367,14 @@ a {
 @media (max-width: 768px) {
     footer ul {
         font-size: 18px;
-        gap: 1.5rem;
+        gap: 1rem;
     }
     .footer-copyright {
         margin-top: 1rem;
         font-size: 16px;
     }
     .footer-icons {
-        display: none;
-    }
-    .footer-icons-mobile {
-        display: flex;
-        flex-direction: row;
+        font-size: 18px;
         gap: 2rem;
-        font-size: 16px;
     }
 }
